--- a/style.css
+++ b/style.css
@@ -1,16 +1,10 @@
 .JavaScript{
-    position: absolute;right: 5%;
-top: 8%;
+    position: absolute;right: 2%;
+    top: 8%;
  }
- .body1{
+body{
     background-color: #8FB9AA;
- }
- .body2{
-    background-color: #8FB9AA;
- }
- .body3{
-    background-color: #8FB9AA;
- }
+}
  #title{
     color: white;
     font-size: 45px;
@@ -20,24 +14,20 @@ top: 8%;
     font-size: 18px;
  }
  .code-box {
-    width: 50%;
-    margin: 20px auto;
+    white-space: pre-wrap; overflow-wrap: break-word;
     border: 1px  #ccc;
     border-radius: 15px;
-    padding: 10px;
+    padding: 5px;
     position: absolute;left: 2%;
     background-color: whitesmoke
 }
 .code-box2 {
-    width: 50%;
-    margin: 20px auto;
+    white-space: pre-wrap; overflow-wrap: break-word;
     border: 1px #ccc;
     border-radius: 15px;
-    padding: 10px;
+    padding: 5px;
     position: absolute;left: 25%;
     background-color: whitesmoke
-    
-
     
 }
 .custom-button1 {
@@ -84,4 +74,8 @@ top: 8%;
     width: 75%;
     height: 75%;
     top: 95%
+}
+#img2{
+    width: 580px; height: 500px;
+    margin: auto; padding: auto;
 }
